--- a/Show_Text_on_Hover/index.html
+++ b/Show_Text_on_Hover/index.html
@@ -142,7 +142,7 @@
     <div class="image_container">
         <img src="https://cdn.pixabay.com/photo/2015/02/20/16/59/deer-643340_960_720.jpg" />
         <span class="title">Surprise!</span>
-        <span class="description">Hi there!☑️🔥</span>
+        <span class="description">What's up?</span>
         <span class="line top"></span>
         <span class="line left"></span>
     </div>
