Text over hover

--- a/Show_Text_on_Hover/index.html
+++ b/Show_Text_on_Hover/index.html
@@ -141,8 +141,8 @@
 <body>
     <div class="image_container">
         <img src="https://cdn.pixabay.com/photo/2015/02/20/16/59/deer-643340_960_720.jpg" />
-        <span class="title">Owaiss Hassan</span>
-        <span class="description">Hi there! Follow me on instagram @khabarqus @anonymedoc. Thanks!</span>
+        <span class="title">Surprise!</span>
+        <span class="description">Hi there!☑️🔥</span>
         <span class="line top"></span>
         <span class="line left"></span>
     </div>
